WIP1 - StubMapping converted to record. Compiling but tests failing.